--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MiPagina @</title>
+    <title>Pagina web</title>
   </head>
   <body>
     <center>
       <h1>Bienvenido a un pagina de prueba</h1>
+      <br /><br />
+      Este es un documento de prueba
     </center>
   </body>
 </html>
